--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
   <img src="http://i66.tinypic.com/k2d63l.png">
   <h1>MbeatTV</h1>
   <p>The heat beat of Sound</p>
-  <input type="email" placeholder="Your email">
-  <input type="submit">
+
+  <form action="https://formspree.io/info@mbeattv.co.za"method="POST">
+      <input type="email" placeholder="Your email" name="_replyto">
+      <input type="submit" value="Send">
+  </form>
+
 </body>
